--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Beedle Brews</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li id="logo">Company</li>
+                <li id="logo">Beedle Brews</li>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#sign-up">Sign Up</a></li>
@@ -18,44 +20,44 @@
         </nav>
         <main id="home">
             <div class="main-text">
-                <h1>This website is awesome</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio illo reiciendis unde. Molestias, esse adipisci.</p>
+                <h1>Where Fantasy Meets Flavor</h1>
+                <p>Our master brewers have sourced the finest ingredients to create unique and flavorful beers that will transport you to another world. Each brew is made with care and precision, ensuring the perfect balance of flavors and aromas. Come and explore our world of Beedle Brews, where adventure and flavor are waiting to be discovered</p>
                 <button class="btn">Sign up</button>
             </div>
             <div class="main-img">
-                <img src="" alt="">
+                <img src="images/main-img.jpg" alt="a tavern interior in low light">
             </div>
         </main>
         <section id="about">
-            <h2>Some random information</h2>
+            <h2>Our enchanted brews and magical elixirs</h2>
             <div class="info-section">
                 <div class="info">
                     <div class="info-img"></div>
-                    <p class="info-text"></p>
+                    <p class="info-text"><span class="brew">Dragon's Breath Ale</span> A fiery ale brewed with dragon peppers and fruit for a spicy kick and hint of sweetness.</p>
                 </div>
                 <div class="info">
                     <div class="info-img"></div>
-                    <p class="info-text"></p>
+                    <p class="info-text"><span class="brew">Unicorn's Delight Lager</span> A light and refreshing lager brewed with rainbow hops and fairy dust for a magical aroma and crisp finish.</p>
                 </div>
                 <div class="info">
                     <div class="info-img"></div>
-                    <p class="info-text"></p>
+                    <p class="info-text"><span class="brew">Goblin's Grog Stout</span> A rich and robust stout brewed with coffee beans and cocoa nibs for a deep, chocolatey flavor with a hint of bitterness.</p>
                 </div>
                 <div class="info">
                     <div class="info-img"></div>
-                    <p class="info-text"></p>
+                    <p class="info-text"><span class="brew">Mermaid's Melody Wheat Beer</span> A refreshing wheat beer brewed with sea salt and seaweed for a unique and salty flavor with a hint of citrus.</p>
                 </div>
             </div>
         </section>
         <section id="testimonial">
-            <blockquote>some quote here</blockquote>
-            <cite>-whoever said the quote</cite>
+            <blockquote>I've been a fan of Beedle Brews ever since I stumbled upon their Goblin's Grog Stout while on a quest through the enchanted forest. The rich, chocolatey flavor and bitter finish were the perfect pick-me-up after a long day of adventuring. I've since tried their Dragon's Breath Ale and Unicorn's Delight Lager, and I have to say, Beedle Brews never disappoints. Each brew is a work of art, crafted with care and precision to transport you to another world. I can't wait to see what new flavors they come up with next!</blockquote>
+            <cite>-Sir Reginald, Knight of the Realm</cite>
         </section>
         <section id="sign-up">
             <div class="cta">
                 <div class="cta-text">
-                  <h4>Call to action! It's time!</h4>
-                <p>Sign up for our product by clicking that button right over there!</p>  
+                  <h4>Join the Beedle Brews Adventure!</h4>
+                <p>Don't miss out on the latest news, flavors, and promotions from Beedle Brews. Sign up for our newsletter and be the first to know about new releases, limited edition brews, and upcoming events. Plus, as a member of our community, you'll receive exclusive discounts and offers.</p>  
                 </div>
                 <button class="btn btn-outline">Sign up</button>
             </div>
