--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li id="logo">Beedle Brews</li>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#sign-up">Sign Up</a></li>
+    <header class="hero">
+        <div class="container">
+            <nav>
+                <ul>
+                    <li id="logo"><a href="#">Beedle Brews</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#sign-up">Sign Up</a></li>
             </ul>
         </nav>
         <main id="home">
@@ -25,27 +26,31 @@
                 <button class="btn">Sign up</button>
             </div>
             <div class="main-img">
-                <img src="images/main-img.jpg" alt="a tavern interior in low light">
+                <!-- <img src="images/main-img.jpg" alt="a tavern interior in low light"> -->
             </div>
         </main>
+    </div>
         <section id="about">
-            <h2>Our enchanted brews and magical elixirs</h2>
-            <div class="info-section">
-                <div class="info">
-                    <div class="info-img"></div>
-                    <p class="info-text"><span class="brew">Dragon's Breath Ale</span> A fiery ale brewed with dragon peppers and fruit for a spicy kick and hint of sweetness.</p>
-                </div>
-                <div class="info">
-                    <div class="info-img"></div>
-                    <p class="info-text"><span class="brew">Unicorn's Delight Lager</span> A light and refreshing lager brewed with rainbow hops and fairy dust for a magical aroma and crisp finish.</p>
-                </div>
-                <div class="info">
-                    <div class="info-img"></div>
-                    <p class="info-text"><span class="brew">Goblin's Grog Stout</span> A rich and robust stout brewed with coffee beans and cocoa nibs for a deep, chocolatey flavor with a hint of bitterness.</p>
-                </div>
-                <div class="info">
-                    <div class="info-img"></div>
-                    <p class="info-text"><span class="brew">Mermaid's Melody Wheat Beer</span> A refreshing wheat beer brewed with sea salt and seaweed for a unique and salty flavor with a hint of citrus.</p>
+            <div class="container">
+
+                <h2>Our enchanted brews and magical elixirs</h2>
+                <div class="info-section">
+                    <div class="info">
+                        <div class="info-img"></div>
+                        <p class="info-text"><span class="brew">Dragon's Breath Ale</span> A fiery ale brewed with dragon peppers and fruit for a spicy kick and hint of sweetness.</p>
+                    </div>
+                    <div class="info">
+                        <div class="info-img"></div>
+                        <p class="info-text"><span class="brew">Unicorn's Delight Lager</span> A light and refreshing lager brewed with rainbow hops and fairy dust for a magical aroma and crisp finish.</p>
+                    </div>
+                    <div class="info">
+                        <div class="info-img"></div>
+                        <p class="info-text"><span class="brew">Goblin's Grog Stout</span> A rich and robust stout brewed with coffee beans and cocoa nibs for a deep, chocolatey flavor with a hint of bitterness.</p>
+                    </div>
+                    <div class="info">
+                        <div class="info-img"></div>
+                        <p class="info-text"><span class="brew">Mermaid's Melody Wheat Beer</span> A refreshing wheat beer brewed with sea salt and seaweed for a unique and salty flavor with a hint of citrus.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -56,7 +61,7 @@
         <section id="sign-up">
             <div class="cta">
                 <div class="cta-text">
-                  <h4>Join the Beedle Brews Adventure!</h4>
+                  <h3>Join the Beedle Brews Adventure!</h3>
                 <p>Don't miss out on the latest news, flavors, and promotions from Beedle Brews. Sign up for our newsletter and be the first to know about new releases, limited edition brews, and upcoming events. Plus, as a member of our community, you'll receive exclusive discounts and offers.</p>  
                 </div>
                 <button class="btn btn-outline">Sign up</button>
