fix the index.html container issue

--- a/index.html
+++ b/index.html
@@ -1,75 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beedle Brews</title>
 
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header class="hero">
-        <div class="container">
-            <nav>
-                <ul>
-                    <li id="logo"><a href="#">Beedle Brews</a></li>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#sign-up">Sign Up</a></li>
-            </ul>
+      <div class="container hero-flex">
+        <nav>
+          <ul>
+            <li><a href="#" id="logo">Beedle Brews</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#sign-up">Sign Up</a></li>
+          </ul>
         </nav>
         <main id="home">
-            <div class="main-text">
-                <h1>Where Fantasy Meets Flavor</h1>
-                <p>Our master brewers have sourced the finest ingredients to create unique and flavorful beers that will transport you to another world. Each brew is made with care and precision, ensuring the perfect balance of flavors and aromas. Come and explore our world of Beedle Brews, where adventure and flavor are waiting to be discovered</p>
-                <button class="btn">Sign up</button>
-            </div>
-            <div class="main-img">
-                <!-- <img src="images/main-img.jpg" alt="a tavern interior in low light"> -->
-            </div>
+          <div class="main-text">
+            <h1>Where Fantasy Meets Flavor</h1>
+            <p>
+              Our master brewers have sourced the finest ingredients to create
+              unique and flavorful beers that will transport you to another
+              world. Each brew is made with care and precision, ensuring the
+              perfect balance of flavors and aromas. Come and explore our world
+              of Beedle Brews, where adventure and flavor are waiting to be
+              discovered
+            </p>
+            <button class="btn">Sign up</button>
+          </div>
+          <div class="main-img">
+            <!-- <img src="images/main-img.jpg" alt="a tavern interior in low light"> -->
+          </div>
         </main>
-    </div>
-        <section id="about">
-            <div class="container">
-
-                <h2>Our enchanted brews and magical elixirs</h2>
-                <div class="info-section">
-                    <div class="info">
-                        <div class="info-img"></div>
-                        <p class="info-text"><span class="brew">Dragon's Breath Ale</span> A fiery ale brewed with dragon peppers and fruit for a spicy kick and hint of sweetness.</p>
-                    </div>
-                    <div class="info">
-                        <div class="info-img"></div>
-                        <p class="info-text"><span class="brew">Unicorn's Delight Lager</span> A light and refreshing lager brewed with rainbow hops and fairy dust for a magical aroma and crisp finish.</p>
-                    </div>
-                    <div class="info">
-                        <div class="info-img"></div>
-                        <p class="info-text"><span class="brew">Goblin's Grog Stout</span> A rich and robust stout brewed with coffee beans and cocoa nibs for a deep, chocolatey flavor with a hint of bitterness.</p>
-                    </div>
-                    <div class="info">
-                        <div class="info-img"></div>
-                        <p class="info-text"><span class="brew">Mermaid's Melody Wheat Beer</span> A refreshing wheat beer brewed with sea salt and seaweed for a unique and salty flavor with a hint of citrus.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="testimonial">
-            <blockquote>I've been a fan of Beedle Brews ever since I stumbled upon their Goblin's Grog Stout while on a quest through the enchanted forest. The rich, chocolatey flavor and bitter finish were the perfect pick-me-up after a long day of adventuring. I've since tried their Dragon's Breath Ale and Unicorn's Delight Lager, and I have to say, Beedle Brews never disappoints. Each brew is a work of art, crafted with care and precision to transport you to another world. I can't wait to see what new flavors they come up with next!</blockquote>
-            <cite>-Sir Reginald, Knight of the Realm</cite>
-        </section>
-        <section id="sign-up">
-            <div class="cta">
-                <div class="cta-text">
-                  <h3>Join the Beedle Brews Adventure!</h3>
-                <p>Don't miss out on the latest news, flavors, and promotions from Beedle Brews. Sign up for our newsletter and be the first to know about new releases, limited edition brews, and upcoming events. Plus, as a member of our community, you'll receive exclusive discounts and offers.</p>  
-                </div>
-                <button class="btn btn-outline">Sign up</button>
-            </div>
-        </section>
-        <footer>
-            Copyright &copy; The Odin Project 2023
-        </footer>
+      </div>
     </header>
-</body>
+    <section id="about">
+      <div class="container">
+        <h2>Our enchanted brews and magical elixirs</h2>
+        <div class="info-section">
+          <div class="info">
+            <div class="info-img"></div>
+            <p class="info-text">
+              <span class="brew">Dragon's Breath Ale</span> A fiery ale brewed
+              with dragon peppers and fruit for a spicy kick and hint of
+              sweetness.
+            </p>
+          </div>
+          <div class="info">
+            <div class="info-img"></div>
+            <p class="info-text">
+              <span class="brew">Unicorn's Delight Lager</span> A light and
+              refreshing lager brewed with rainbow hops and fairy dust for a
+              magical aroma and crisp finish.
+            </p>
+          </div>
+          <div class="info">
+            <div class="info-img"></div>
+            <p class="info-text">
+              <span class="brew">Goblin's Grog Stout</span> A rich and robust
+              stout brewed with coffee beans and cocoa nibs for a deep,
+              chocolatey flavor with a hint of bitterness.
+            </p>
+          </div>
+          <div class="info">
+            <div class="info-img"></div>
+            <p class="info-text">
+              <span class="brew">Mermaid's Melody Wheat Beer</span> A refreshing
+              wheat beer brewed with sea salt and seaweed for a unique and salty
+              flavor with a hint of citrus.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="testimonial">
+      <div class="container">
+        <blockquote>
+          I've been a fan of Beedle Brews ever since I stumbled upon their
+          Goblin's Grog Stout while on a quest through the enchanted forest. The
+          rich, chocolatey flavor and bitter finish were the perfect pick-me-up
+          after a long day of adventuring. I've since tried their Dragon's
+          Breath Ale and Unicorn's Delight Lager, and I have to say, Beedle
+          Brews never disappoints. Each brew is a work of art, crafted with care
+          and precision to transport you to another world. I can't wait to see
+          what new flavors they come up with next!
+        </blockquote>
+        <cite>-Sir Reginald, Knight of the Realm</cite>
+      </div>
+    </section>
+    <section id="sign-up">
+      <div class="container">
+        <div class="cta">
+          <div class="cta-text">
+            <h3>Join the Beedle Brews Adventure!</h3>
+            <p>
+              Don't miss out on the latest news, flavors, and promotions from
+              Beedle Brews. Sign up for our newsletter and be the first to know
+              about new releases, limited edition brews, and upcoming events.
+              Plus, as a member of our community, you'll receive exclusive
+              discounts and offers.
+            </p>
+          </div>
+          <button class="btn btn-outline">Sign up</button>
+        </div>
+      </div>
+    </section>
+    <footer>Copyright &copy; The Odin Project 2023</footer>
+  </body>
 </html>
