--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
         <main id="home">
           <div class="main-text">
-            <h1>Where Fantasy Meets Flavor</h1>
+            <h1>Where fantasy meets flavor</h1>
             <p>
               Our master brewers have sourced the finest ingredients to create
               unique and flavorful beers that will transport you to another
@@ -43,7 +43,7 @@
         <h2>Our enchanted brews and magical elixirs</h2>
         <div class="info-section">
           <div class="info">
-            <div class="info-img"></div>
+            <div class="info-img dragon-img"></div>
             <p class="info-text">
               <span class="brew">Dragon's Breath Ale</span> A fiery ale brewed
               with dragon peppers and fruit for a spicy kick and hint of
@@ -51,7 +51,7 @@
             </p>
           </div>
           <div class="info">
-            <div class="info-img"></div>
+            <div class="info-img unicorn-img"></div>
             <p class="info-text">
               <span class="brew">Unicorn's Delight Lager</span> A light and
               refreshing lager brewed with rainbow hops and fairy dust for a
@@ -59,7 +59,7 @@
             </p>
           </div>
           <div class="info">
-            <div class="info-img"></div>
+            <div class="info-img goblin-img"></div>
             <p class="info-text">
               <span class="brew">Goblin's Grog Stout</span> A rich and robust
               stout brewed with coffee beans and cocoa nibs for a deep,
@@ -67,7 +67,7 @@
             </p>
           </div>
           <div class="info">
-            <div class="info-img"></div>
+            <div class="info-img mermaid-img"></div>
             <p class="info-text">
               <span class="brew">Mermaid's Melody Wheat Beer</span> A refreshing
               wheat beer brewed with sea salt and seaweed for a unique and salty
