update testimonial section

--- a/index.html
+++ b/index.html
@@ -85,11 +85,10 @@
           rich, chocolatey flavor and bitter finish were the perfect pick-me-up
           after a long day of adventuring. I've since tried their Dragon's
           Breath Ale and Unicorn's Delight Lager, and I have to say, Beedle
-          Brews never disappoints. Each brew is a work of art, crafted with care
-          and precision to transport you to another world. I can't wait to see
+          Brews never disappoints. I can't wait to see
           what new flavors they come up with next!
+          <p class="cite">- Sir Reginald, Knight of the Realm</p>
         </blockquote>
-        <cite>-Sir Reginald, Knight of the Realm</cite>
       </div>
     </section>
     <section id="sign-up">
