--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav>
           <ul>
             <li><a href="#" id="logo">Beedle Brews</a></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#sign-up">Sign Up</a></li>
+            <li><a href="#home" class="link">Home</a></li>
+            <li><a href="#about" class="link">About</a></li>
+            <li><a href="#sign-up" class="link">Sign Up</a></li>
           </ul>
         </nav>
         <main id="home">
